# inTRACKtive

./: .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  CONFIG.json  CONFIG.ts  CONTRIBUTING.md  README.md  Untitled.ipynb  anywidget_example.ipynb  anywidget_example2.ipynb  anywidget_example3.ipynb  index.html  jest.config.cjs  package-lock.json  package.json  test_widget.ipynb  tsconfig.json  vite.config.ts
__tests__/: ViewerState.test.ts  main.test.ts  main.test.tsx
docs/: README.md
python/: .pre-commit-config.yaml  README.md  pyproject.toml
python/src/examples/: notebook2_inTRACKtive_from_napari.ipynb
python/src/intracktive/: __about__.py  __init__.py  __main__.py  _make_random_points.py  conftest.py  convert.py  convert_OLD.py  createHash.py  geff.py  main.py  napari.yaml  napari_widget.py  notebook_widget.py  open.py  serve_directory_http.py  server.py  test_widget.py  widget.py
python/src/intracktive/_tests/: test_cli.py  test_convert.py  test_geff.py  test_widget.py
python/src/intracktive/_tests/data/ctc_hela_example.geff/: .zattrs
python/src/intracktive/_tests/data/ctc_hela_example.geff/edges/ids/: .zarray  0.0
python/src/intracktive/_tests/data/ctc_hela_example.geff/nodes/ids/: .zarray  0
python/src/intracktive/_tests/data/ctc_hela_example.geff/nodes/props/t/values/: .zarray  0
python/src/intracktive/_tests/data/ctc_hela_example.geff/nodes/props/tracklet_id/values/: .zarray  0
python/src/intracktive/_tests/data/ctc_hela_example.geff/nodes/props/x/values/: .zarray  0
python/src/intracktive/_tests/data/ctc_hela_example.geff/nodes/props/y/values/: .zarray  0
python/src/intracktive/_tests/data/gt_data_bundle.zarr/points/: .zarray  .zattrs  0.0  1.0
python/src/intracktive/_tests/data/gt_data_bundle.zarr/points_to_tracks/: .zattrs
python/src/intracktive/_tests/data/gt_data_bundle.zarr/points_to_tracks/indices/: 0
python/src/intracktive/_tests/data/gt_data_bundle.zarr/points_to_tracks/indptr/: .zarray  0
python/src/intracktive/_tests/data/gt_data_bundle.zarr/tracks_to_points/data/: .zarray  0.0
python/src/intracktive/_tests/data/gt_data_bundle.zarr/tracks_to_points/indices/: 0
python/src/intracktive/_tests/data/gt_data_bundle.zarr/tracks_to_points/indptr/: .zarray  0
python/src/intracktive/_tests/data/gt_data_bundle.zarr/tracks_to_tracks/: .zattrs
python/src/intracktive/_tests/data/gt_data_bundle.zarr/tracks_to_tracks/data/: .zarray  0
python/src/intracktive/_tests/data/gt_data_bundle.zarr/tracks_to_tracks/indices/: .zarray  0
python/src/intracktive/_tests/data/gt_data_bundle.zarr/tracks_to_tracks/indptr/: 0
python/src/intracktive/_tests/data/trackmate_example.geff/: .zattrs
python/src/intracktive/_tests/data/trackmate_example.geff/edges/ids/: .zarray  0.0
python/src/intracktive/_tests/data/trackmate_example.geff/edges/props/distance/values/: 0
python/src/intracktive/_tests/data/trackmate_example.geff/edges/props/score/values/: .zarray  0
python/src/intracktive/_tests/data/trackmate_example.geff/nodes/ids/: 0
python/src/intracktive/_tests/data/trackmate_example.geff/nodes/props/color/values/: .zarray  0.0
python/src/intracktive/_tests/data/trackmate_example.geff/nodes/props/covariance2d/values/: 0.0
python/src/intracktive/_tests/data/trackmate_example.geff/nodes/props/covariance3d/values/: .zarray  0.0
python/src/intracktive/_tests/data/trackmate_example.geff/nodes/props/radius/values/: 0
python/src/intracktive/_tests/data/trackmate_example.geff/nodes/props/t/values/: .zarray  0
python/src/intracktive/_tests/data/trackmate_example.geff/nodes/props/track_id/values/: .zarray  0
python/src/intracktive/_tests/data/trackmate_example.geff/nodes/props/x/values/: 0
python/src/intracktive/_tests/data/trackmate_example.geff/nodes/props/y/values/: .zarray  0
python/src/intracktive/_tests/data/trackmate_example.geff/nodes/props/z/values/: .zarray  0
python/src/intracktive/examples/: anywidget_example.ipynb  anywidget_example2.ipynb  anywidget_example3.ipynb  notebook1_inTRACKtive_from_notebook.ipynb  notebook2_inTRACKtive_from_napari.ipynb
python/src/intracktive/frontend/: index.html
python/src/intracktive/frontend/assets/: index-CJyVt1rS.css  index-Cv2m0Z7L.js
python/static/: widget.css
src/: PointCanvas.ts  PointSelectionBox.ts  Track.ts  TrackManager.ts  ViewerState.ts  app.css  app.tsx  canvas.ts  index.css  main.tsx  scene.tsx  vite-env.d.ts  widget.tsx
static/: widget.css
tools/: README.md  convert_tracks_csv_to_sparse_zarr.py  convert_tracks_csv_to_sparse_zarr_with_radius.py  make_random_points.py  serve_directory_http.py  serve_zarr_points.py  tracks.py  tracks_csv_edges_to_zarr.py  tracks_csv_to_points_zarr.py  tracks_csv_to_zarr.py  tracks_csv_to_zarr_group.py  tracks_csv_to_zarrs.py
(+55 files in other folders)
